add npm run commands for clean and build
added npm command to build contents of 'build' and clean (remove)
'build' directory, can be used in Run/Debug Configs

Also updated webpack.config.js to use path library

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "build": "webpack",
+    "clean": "rm -fr ./build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
