--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "debugging-webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "./main.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.config.js",
     "clean": "rm -fr ./build"
   },
   "devDependencies": {
